# predictor

./: .gitignore  Anchor.toml  Cargo.toml  README.md  designstudio.html  package.json  tsconfig.json
.github/workflows/: anchor-deploy.yml
backend/: .env.example  .eslintrc.cjs  jest.config.ts
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.ts  server.ts  worker.ts
backend/src/config/: env.ts
backend/src/controllers/: adminController.ts  authController.ts  marketController.ts  userController.ts  webhookController.ts
backend/src/lib/: bondingCurve.ts  logger.ts  prisma.ts  redis.ts
backend/src/middleware/: auth.ts  errorHandler.ts  notFound.ts
backend/src/routes/: admin.ts  auth.ts  index.ts  markets.ts  user.ts  webhooks.ts
backend/src/scripts/: bondingCurveSimulation.ts
backend/src/services/: authService.ts  marketService.ts  walletService.ts
backend/src/workers/: index.ts  payoutWorker.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md
programs/hyper_prediction/: Cargo.toml
programs/hyper_prediction/src/: lib.rs
programs/prediction_market/: Cargo.toml
programs/prediction_market/src/: lib.rs
scripts/: devnet_pred_market.ts
tests/: hyper_prediction.ts
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: admin.ts  auth.ts  client.ts  markets.ts  user.ts
web/src/components/: AttentionStream.tsx  Hero.tsx  MarketCard.tsx  MarketGrid.tsx  MarketRow.tsx  TradePanel.tsx  WalletDebug.tsx
web/src/context/: AuthContext.tsx  MarketsContext.tsx
web/src/hooks/: useAttention.ts  useMarkets.ts
web/src/idl/: hyper_prediction.json
web/src/layout/: AppShell.tsx
(+14 files in other folders)
