[workspace]
members = [
    "programs/hyper_prediction"
]
exclude = [
    "programs/prediction_market",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = true

[profile.dev]
overflow-checks = true



[patch.crates-io]
solana-program = { git = "https://github.com/solana-labs/solana", tag = "v2.2.1", package = "solana-program" }
