[workspace]
members = [
    "programs/hyper_prediction"
]
exclude = [
    "programs/prediction_market",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = true

[profile.dev]
overflow-checks = true


[patch.crates-io]
solana-program = { version = "=1.18.17", package = "solana-program" }
solana-sdk = { version = "=1.18.17", package = "solana-sdk" }
solana-client = { version = "=1.18.17", package = "solana-client" }
solana-transaction-status = { version = "=1.18.17", package = "solana-transaction-status" }



