[workspace]
members = [
    "programs/hyper_prediction"
]
exclude = [
    "programs/prediction_market",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = true

[profile.dev]
overflow-checks = true


[workspace.dependencies]
solana-program = "=1.18.17"
solana-sdk = "=1.18.17"
solana-client = "=1.18.17"
solana-transaction-status = "=1.18.17"



