[package]
name = "hyper_prediction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token", "metadata"] }
solana-program = "=2.2.20"
solana-loader-v3-interface = "=3.0.0"
fixed = "1.26.0"

[features]
default = []

